# hex2dec

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  Release.yml
scripts/: ci.sh  lint.sh  test.sh
src/: lib.rs  main.rs
